# manifold

./: CMakeLists.txt  README.md  bhtsne_linux  bhtsne_maci  init.lua  laplacian_eigenmaps.lua  lle.lua  manifold-scm-0.rockspec  swissroll.lua  tsne.lua
demos/: ITorchtSNE.ipynb  demo_swissroll.lua  demo_tsne.ipynb  demo_tsne.lua
generic/: tsne.cpp  tsne.h
